@@ -5,6 +5,8 @@ ostree (2016.6-0) master; urgency=medium
 
   [ Simon McVittie ]
   * Build-depend on procps, used to check for leaked processes
+  * debian/test.sh: factor out our dh_auto_test wrapper, and clean
+    up any stray processes even if the test fails
 
  -- Dan Nicholson <nicholson@endlessm.com>  Fri, 24 Jun 2016 09:56:56 -0700
 
